--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -1,142 +1,126 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
-:root {
-    --bg-color: #1a1a1a;
-}
-
-* {
-    font-weight: 500;
-    box-sizing: border-box;
-}
-
+/* General Styles */
 body {
+    font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #1a1a1a;
-    font-family: "Raleway", sans-serif;
-    text-align: center;
-}
-
-a {
+    padding: 0;
+    background-color: #111;
     color: #fff;
-    text-decoration: none;
-    transition-duration: 0.3s;
 }
 
 .container {
-    width: 90%;
-    max-width: 1300px;
-    margin: 48px auto;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1em;
 }
 
-a:hover{
-    color: #abdded;
+/* Navbar Styles */
+.navbar {
+    background-color: #222;
+    padding: 1em 0;
 }
 
-/* Header */
-.navbar{
-    position: sticky;
-    top: 0px;
-    background-color: var(--bg-color);
-    padding-top: 9px;
-    padding-bottom: 9px;
-    z-index: 1000;
-}
-
-.navbar .container {
+.navbar .logo {
     display: flex;
     align-items: center;
-    justify-content: space-between; 
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    font-weight: 800;
-}
-
-.logo img {
-    margin-right: 16px;
-    border-radius: 6px;
-    width: 56px !important;
-}
-
-.logo span {
-    font-size: 6;
-    font-weight: 700;
-}
-
-.navbar ul {
-    display: flex;
-    list-style-type: none;
-    padding: 0px;
-    margin: 0;
-}
-
-.navbar li {
-    position: relative;
-    margin-left: 24px;
-    padding: 12px 0px;
-}
-
-.navbar li:first-child {
-    margin-left: 0;
-}
-
-.dropdown-cont {
-    position: absolute;
-    z-index: 500;
-    top: 43px;
-    right: 0px;
-    display: none;
-    border-radius: 8px;
-    overflow: hidden;
-    background-color: white;
-    width: 170px;
-}
-
-.dropdown:hover>.dropdown-cont {
-    display: block;
-}  
-
-.dropdown-cont ul {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-}
-
-.dropdown-cont ul li {
-    margin-left: 0px;
-    white-space: nowrap;
-    margin-bottom: 0px;
-    padding: 8px 16px;
-    width: 100%;
-}
-
-.dropdown-cont ul li:hover {
-    background-color: #dfdfdf;
-}
-
-.dropdown-cont a {
-    color: #1a1a1a;
-}
-
-/* Body */
-
-/* .body {
-    align-items: center;
-    justify-content: center;
-} */
-
-h1, h3 {
+    text-decoration: none;
     color: #fff;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.navbar .logo img {
+    height: 40px;
+    margin-right: 10px;
+}
+
+.navbar nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.navbar nav ul li {
+    margin: 0 1em;
+}
+
+.navbar nav ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 1em;
+    transition: color 0.3s;
+}
+
+.navbar nav ul li a:hover {
+    color: #5cb85c;
+}
+
+.navbar nav ul li.dropdown {
+    position: relative;
+}
+
+.navbar nav ul li.dropdown .dropdown-cont {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #333;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.navbar nav ul li.dropdown:hover .dropdown-cont {
+    display: block;
+}
+
+.navbar nav ul li.dropdown .dropdown-cont ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar nav ul li.dropdown .dropdown-cont ul li {
+    padding: 1em;
+}
+
+.navbar nav ul li.dropdown .dropdown-cont ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.navbar nav ul li.dropdown .dropdown-cont ul li a:hover {
+    background-color: #444;
+}
+
+/* Body Section Styles */
+.body {
+    padding: 2em 0;
     text-align: center;
 }
 
-h1 {
-    font-weight: 800;
+.body h1 {
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+}
+
+.body h3 {
+    font-size: 1.2em;
+    margin-bottom: 1em;
 }
 
 .btn {
-    align-items: center;
-    padding: 12px;
+    background-color: #5cb85c;
+    color: white;
+    padding: 0.75em 1.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: #4cae4c;
 }
