--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -214,4 +214,36 @@ body {
     background-color: #4cae4c;
 }
 
+/* Footer */
+footer {
+    text-align: center;
+    color: #fff;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    border-top: 2px solid #3b3b3b;
+}
+
+footer img {
+    width: 150px;
+}
+
+footer a {
+    color: #abdded;
+    transition-duration: 0.2s;
+}
+
+footer a:hover {
+    color:  #50acca;
+}
+
+footer h4, footer p{
+    margin: 0;
+}
+
+footer h4 {
+    font-weight: 700;
+    margin: 32px 0 8px 0;
+}
+
+
 
