--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -1,4 +1,27 @@
-.navbar{
+/* General Styles */
+:root {
+    --bg-color: #111; /* Adjust this if you have a different background color */
+    --primary-color: #5cb85c;
+    --hover-color: #4cae4c;
+    --text-color: #fff;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1em;
+}
+
+/* Navbar Styles */
+.navbar {
     position: sticky;
     top: 0px;
     background-color: var(--bg-color);
@@ -26,7 +49,7 @@
 }
 
 .logo span {
-    font-size: 6;
+    font-size: 24px;
     font-weight: 700;
 }
 
@@ -47,6 +70,17 @@
     margin-left: 0;
 }
 
+.navbar a {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 16px;
+    transition: color 0.3s;
+}
+
+.navbar a:hover {
+    color: var(--primary-color);
+}
+
 .dropdown-cont {
     position: absolute;
     z-index: 500;
@@ -61,7 +95,7 @@
 
 .dropdown:hover>.dropdown-cont {
     display: block;
-}  
+}
 
 .dropdown-cont ul {
     display: flex;
@@ -83,107 +117,9 @@
 
 .dropdown-cont a {
     color: #1a1a1a;
-
 }
 
-
-/* General Styles */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #111;
-    color: #fff;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1em;
-}
-
-/* Navbar Styles */
-.navbar {
-    background-color: #222;
-    padding: 1em 0;
-}
-
-.navbar .logo {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.5em;
-    font-weight: bold;
-}
-
-.navbar .logo img {
-    height: 40px;
-    margin-right: 10px;
-}
-
-.navbar nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.navbar nav ul li {
-    margin: 0 1em;
-}
-
-.navbar nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1em;
-    transition: color 0.3s;
-}
-
-.navbar nav ul li a:hover {
-    color: #5cb85c;
-}
-
-.navbar nav ul li.dropdown {
-    position: relative;
-}
-
-.navbar nav ul li.dropdown .dropdown-cont {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #333;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.navbar nav ul li.dropdown:hover .dropdown-cont {
-    display: block;
-}
-
-.navbar nav ul li.dropdown .dropdown-cont ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar nav ul li.dropdown .dropdown-cont ul li {
-    padding: 1em;
-}
-
-.navbar nav ul li.dropdown .dropdown-cont ul li a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.navbar nav ul li.dropdown .dropdown-cont ul li a:hover {
-    background-color: #444;
-}
-
-/* Body Section Styles */
+/* Registration Section Styles */
 .body {
     padding: 2em 0;
     text-align: center;
@@ -200,7 +136,7 @@ body {
 }
 
 .btn {
-    background-color: #5cb85c;
+    background-color: var(--primary-color);
     color: white;
     padding: 0.75em 1.5em;
     border: none;
@@ -211,10 +147,10 @@ body {
 }
 
 .btn:hover {
-    background-color: #4cae4c;
+    background-color: var(--hover-color);
 }
 
-/* Footer */
+/* Footer Styles */
 footer {
     text-align: center;
     color: #fff;
@@ -233,10 +169,10 @@ footer a {
 }
 
 footer a:hover {
-    color:  #50acca;
+    color: #50acca;
 }
 
-footer h4, footer p{
+footer h4, footer p {
     margin: 0;
 }
 
@@ -244,6 +180,3 @@ footer h4 {
     font-weight: 700;
     margin: 32px 0 8px 0;
 }
-
-
-
