--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -1,27 +1,38 @@
-/* General Styles */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
-    --bg-color: #111; /* Adjust this if you have a different background color */
-    --primary-color: #5cb85c;
-    --hover-color: #4cae4c;
-    --text-color: #fff;
+    --bg-color: #1a1a1a;
+}
+
+* {
+    font-weight: 500;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: Raleway, sans-serif;
     margin: 0;
-    padding: 0;
-    background-color: var(--bg-color);
-    color: var(--text-color);
+    background-color: #1a1a1a;
+    font-family: "Raleway", sans-serif;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+    transition-duration: 0.3s;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1em;
+    width: 95%;
+    max-width: 1400px;
+    margin: 0px auto;
 }
 
-/* Navbar Styles */
-.navbar {
+a:hover{
+    color: #abdded;
+}
+
+/* Header */
+.navbar{
     position: sticky;
     top: 0px;
     background-color: var(--bg-color);
@@ -49,7 +60,7 @@ body {
 }
 
 .logo span {
-    font-size: 24px;
+    font-size: 6;
     font-weight: 700;
 }
 
@@ -70,17 +81,6 @@ body {
     margin-left: 0;
 }
 
-.navbar a {
-    text-decoration: none;
-    color: var(--text-color);
-    font-size: 16px;
-    transition: color 0.3s;
-}
-
-.navbar a:hover {
-    color: var(--primary-color);
-}
-
 .dropdown-cont {
     position: absolute;
     z-index: 500;
@@ -95,7 +95,7 @@ body {
 
 .dropdown:hover>.dropdown-cont {
     display: block;
-}
+}  
 
 .dropdown-cont ul {
     display: flex;
@@ -117,66 +117,6 @@ body {
 
 .dropdown-cont a {
     color: #1a1a1a;
+
 }
 
-/* Registration Section Styles */
-.body {
-    padding: 2em 0;
-    text-align: center;
-}
-
-.body h1 {
-    font-size: 2.5em;
-    margin-bottom: 0.5em;
-}
-
-.body h3 {
-    font-size: 1.2em;
-    margin-bottom: 1em;
-}
-
-.btn {
-    background-color: var(--primary-color);
-    color: white;
-    padding: 0.75em 1.5em;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1em;
-    transition: background-color 0.3s;
-}
-
-.btn:hover {
-    background-color: var(--hover-color);
-}
-
-/* Footer Styles */
-footer {
-    text-align: center;
-    color: #fff;
-    padding-top: 64px;
-    padding-bottom: 64px;
-    border-top: 2px solid #3b3b3b;
-}
-
-footer img {
-    width: 150px;
-}
-
-footer a {
-    color: #abdded;
-    transition-duration: 0.2s;
-}
-
-footer a:hover {
-    color: #50acca;
-}
-
-footer h4, footer p {
-    margin: 0;
-}
-
-footer h4 {
-    font-weight: 700;
-    margin: 32px 0 8px 0;
-}
