--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -141,3 +141,20 @@ a:hover{
     background-position: center;
     backdrop-filter: blur(10px);
 }
+
+
+.btn-purple {
+    background-color: #6a0dad; /* Purple background color */
+    color: white;
+    padding: 0.75em 1.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.btn-purple:hover {
+    background-color: #5a00a3; /* Darker purple for hover */
+    transform: scale(1.05); /* Slightly larger on hover */
+}
