--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --bg-color: #111; /* Adjust this if you have a different background color */
     --primary-color: #5cb85c;
