--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -104,4 +104,134 @@ a:hover{
     margin-left: 0;
 }
 
+.dropdown-cont {
+    position: absolute;
+    z-index: 500;
+    top: 43px;
+    right: 0px;
+    display: none;
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: white;
+    width: 170px;
+}
+
+.dropdown:hover>.dropdown-cont {
+    display: block;
+}  
+
+.dropdown-cont ul {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.dropdown-cont ul li {
+    margin-left: 0px;
+    white-space: nowrap;
+    margin-bottom: 0px;
+    padding: 8px 16px;
+    width: 100%;
+}
+
+.dropdown-cont ul li:hover {
+    background-color: #dfdfdf;
+}
+
+.dropdown-cont a {
+    color: #1a1a1a;
+
+}
+
+/* Hero Section */
+.hero-section .container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 580px;
+    height: 80vh;
+    max-height: 600px;
+    color: #fff;
+    border-radius: 12px;
+    overflow: hidden;
+    margin-top: 24px;
+    margin-bottom: 24px;
+    border: 2px solid #3b3b3b;
+    /* background-image: url("https://images.unsplash.com/photo-1510519138101-570d1dca3d66?q=80&w=2047&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); */
+    background-size: cover;
+    background-position: center;
+    backdrop-filter: blur(10px);
+}
+
+
+/* Registration Section Styles */
+.body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full height of the viewport */
+    text-align: center;
+    padding: 2em 0;
+}
+
+.body h1 {
+    font-size: 2.5em;
+    margin-bottom: 0.5em;
+}
+
+.body h3 {
+    font-size: 1.2em;
+    margin-bottom: 1em;
+}
+
+/* Purple Button Styles */
+.btn-purple {
+    background-color: #6a0dad; /* Purple background color */
+    color: white;
+    padding: 0.75em 1.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.btn-purple:hover {
+    background-color: #5a00a3; /* Darker purple for hover */
+    transform: scale(1.05); /* Slightly larger on hover */
+}
+
+/* Footer Styles */
+footer {
+    text-align: center;
+    color: #fff;
+    padding-top: 64px;
+    padding-bottom: 64px;
+    border-top: 2px solid #3b3b3b;
+}
+
+footer img {
+    width: 150px;
+}
+
+footer a {
+    color: #abdded;
+    transition-duration: 0.2s;
+}
+
+footer a:hover {
+    color: #50acca;
+}
+
+footer h4, footer p {
+    margin: 0;
+}
+
+footer h4 {
+    font-weight: 700;
+    margin: 32px 0 8px 0;
+}
 
