--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier New:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --bg-color: #111; /* Adjust this if you have a different background color */
     --primary-color: #5cb85c;
@@ -6,7 +6,7 @@
     --text-color: #fff;
 }
 body {
-    font-family: "Raleway", sans-serif;
+    font-family: "Courier New", sans-serif;
     margin: 0;
     padding: 0;
     background-color: var(--bg-color);
@@ -17,7 +17,7 @@ body {
     margin: 0 auto;
     padding: 0 1em;
 }
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier New:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --bg-color: #1a1a1a;
 }
@@ -28,7 +28,7 @@ body {
 body {
     margin: 0;
     background-color: #1a1a1a;
-    font-family: "Raleway", sans-serif;
+    font-family: "Courier New", sans-serif;
 }
 a {
     color: #fff;
