--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Andale Mono:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier New:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --bg-color: #1a1a1a;
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     background-color: #1a1a1a;
-    font-family: "Andale Mono", sans-serif;
+    font-family: "Courier New", sans-serif;
 }
 
 a {
