--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -235,6 +235,11 @@ footer h4 {
     box-sizing: border-box; /* Ensure padding and border are included in width */
 }
 
+.theme-box:nth-child(odd) {
+    margin-left: auto; /* Push odd-numbered boxes to the right */
+    width: 100%; /* Full width for odd-numbered boxes */
+}
+
 .theme-box h3 {
     font-size: 1.8em;
     margin-bottom: 10px; /* Adjusted margin-bottom for title */
@@ -249,3 +254,5 @@ footer h4 {
 @media (max-width: 840px) {
     .theme-box {
         width: calc(100% - 20px); /* Full width on smaller screens */
+    }
+}
