--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -220,6 +220,15 @@ footer h4 {
     background-color: var(--bg-color);
     border: 2px solid #3b3b3b;
     border-radius: 12px;
+}
+
+.themes-title {
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: var(--text-color);
+}
+
+.themes-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two columns layout */
     gap: 20px;
@@ -244,7 +253,7 @@ footer h4 {
 }
 
 @media (max-width: 840px) {
-    .themes-content {
+    .themes-grid {
         grid-template-columns: 1fr; /* Single column layout on smaller screens */
     }
 
