--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -214,7 +214,7 @@ footer h4 {
 /* Themes Section */
 .themes-content {
     text-align: center;
-    max-width: 1000px;
+    max-width: 800px;
     margin: 40px auto;
     padding: 20px;
     background-color: var(--bg-color);
@@ -222,44 +222,27 @@ footer h4 {
     border-radius: 12px;
 }
 
-.themes-title {
-    font-size: 3em; /* Increased font size */
-    margin-bottom: 40px; /* Added more margin below the title */
-    color: var(--text-color);
-}
-
-.themes-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Two columns layout */
-    gap: 20px;
-    justify-items: center;
+.themes-content h2 {
+    font-size: 2.5em;
+    margin-bottom: 30px;
+    color: var(--primary-color);
 }
 
 .theme-box {
-    padding: 20px;
+    margin-bottom: 30px; /* Increased margin-bottom for spacing between boxes */
+    padding: 20px; /* Increased padding for larger content area */
     border: 2px solid #3b3b3b;
     border-radius: 8px;
     background-color: #1f1f1f;
-    color: var(--text-color);
-    width: 100%; /* Ensures the boxes take up the full available width */
 }
 
 .theme-box h3 {
     font-size: 1.8em;
-    margin-bottom: 25px;
+    margin-bottom: 15px; /* Adjusted margin-bottom for title */
     color: var(--primary-color);
 }
 
 .theme-box p {
     font-size: 1.2em;
-}
-
-@media (max-width: 840px) {
-    .themes-grid {
-        grid-template-columns: 1fr; /* Single column layout on smaller screens */
-    }
-
-    .theme-box {
-        width: 100%;
-    }
+    color: var(--text-color);
 }
