--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -136,6 +136,40 @@ a:hover {
     background-position: center;
     backdrop-filter: blur(10px);
 }
+
+.hero-section video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 0;
+}
+
+.hero-section img {
+    position: relative;
+    z-index: 5;
+    width: 240px;
+    overflow: hidden;
+}
+
+.hero-section h1 {
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: 32px;
+    margin-bottom: 0;
+    text-shadow: 0px 0px 8px rgba(0,0,0,0.8);
+    position: relative;
+    z-index: 5;
+    
+}
+
+.hero-section h2 {
+    margin-top: 8;
+    margin-bottom: 0;
+    text-shadow: 0px 0px 8px rgba(0,0,0,0.8);
+    position: relative;
+    z-index: 5;
+}
 /* Registration Section Styles */
 .body {
     display: flex;
