--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -141,6 +141,7 @@ body {
     border: 2px solid #3b3b3b;
     padding: 10px;
     color: var(--text-color);
+    text-align: center;
 }
 
 .registration-table th {
