--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     background-color: #1a1a1a;
-    font-family: "Courier New", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 a {
