--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Courier+New:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
     --bg-color: #111; /* Adjust this if you have a different background color */
     --primary-color: #B200ED; /* Purple color */
@@ -6,7 +6,7 @@
     --text-color: #fff;
 }
 body {
-    font-family: "Courier New", sans-serif;
+    font-family: "Raleway", sans-serif;
     margin: 0;
     padding: 0;
     background-color: var(--bg-color);
